# webRTC-connect

./: .dockerignore  .gitignore  CHANGE_PROPOSAL.md  LICENSE  QUICK_START.md  README.md  SIGNALING_ARCHITECTURE.md  SIGNALING_QUICK_REFERENCE.md  SLEAP_RTC_IMPLEMENTATION_CHECKLIST.md  create_test_room.py  cross-account-permissions-policy.json  cross-account-trust-policy.json  github-actions-trust-policy.json  iam-policy-terraform-github-actions.json  iam-policy-terraform.json  local-testing-policy.json  test_discovery.py
docs/: ADMIN_SECURITY.md  ARCHITECTURE_INDEX.md  CONCERNS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OPERATIONAL_CONCERNS.md  SCALING_ARCHITECTURE.md  SIGNALING_API_V2.md  SLEAP_RTC_PROTOCOL.md  STATUS_SYNC_DIAGRAM.md  WORKFLOW_EXAMPLE.md  auth-tables.md  github-oauth-setup.md
openspec/: project.md
scripts/: generate-jwt-keys.sh  setup-auth-tables.sh  setup-aws-infrastructure.sh
sleap_webRTC/: README.md  main.tf
terraform/: GITHUB_ACTIONS_SETUP.md  README.md
webRTC_external/: Dockerfile  client.py  delete_all_cognito_users.py  frame_client.py  frame_worker.py  ice_config.py  pyproject.toml  requirements.txt  server.py
webRTC_external/.devcontainer/: devcontainer.json
webRTC_external/test_files/: abc.txt  initial_config.json  random.json  random1.json
webRTC_worker_container/: Dockerfile  Dockerfile1  worker.py
webRTC_worker_sleap_container/: .dockerignore  Dockerfile  pyproject.toml  run_training.py  worker.py  worker_class.py  zmq_check.py
webRTC_worker_sleap_container/.devcontainer/: devcontainer.json
(+35 files in other folders)
