[project]
name = "webrtc-external"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "boto3>=1.40.29",
    "logging>=0.4.9.6",
    "requests>=2.32.5",
    "uuid>=1.30",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
