[project]
name = "webrtc-worker-sleap-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiortc>=1.0.0",
    "boto3>=1.26.0",
    "pyzmq>=25.0.0",
    "requests>=2.28.0",
    "websockets>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]